overflow fix, meta theme

--- a/CSS/food.css
+++ b/CSS/food.css
@@ -13,10 +13,10 @@
 html {
   scroll-behavior: smooth;
 }
-
 body {
   /* font-family: "Roboto", sans-serif; */
   height: 100vh;
+  overflow-x: hidden;
 }
 
 ::selection {
